--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,5 +34,34 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  background: #2b2b2b;
+  margin-bottom: 16px;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: background 0.3s;
+}
+
+.cart-item:hover {
+  background: #393939;
+}
+
+.cart-img {
+  width: 100px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  flex-shrink: 0;
+  border-radius: 8px;
+}
+
+@media (max-width: 600px) {
+  .cart-img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
   }
 }
