--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -39,11 +39,19 @@
 }
 
 .checkout-item img {
-  width: 70px;
-  height: 40px;
+  height: 20px;
+  width: 80px;
+  aspect-ratio: 16/9;
   object-fit: cover;
   border-radius: 4px;
   margin-right: 15px;
+}
+
+@media (max-width: 640px) {
+  .checkout-item img {
+    aspect-ratio: 1/1;
+    width: 70px;
+  }
 }
 
 .checkout-item strong {
